--- a/codepipeline_for_ecr.yml
+++ b/codepipeline_for_ecr.yml
@@ -19,7 +19,7 @@ Resources:
   CodeBuildProject:
     Type: AWS::CodeBuild::Project
     Properties:
-      Name: nginx-container-build
+      Name: !Sub '${AWS::StackName}-nginx-container-build'
       Artifacts:
         Type: CODEPIPELINE
       Environment:
@@ -27,34 +27,8 @@ Resources:
         Image: aws/codebuild/amazonlinux2-x86_64-standard:3.0
         Type: LINUX_CONTAINER
         PrivilegedMode: true
-        EnvironmentVariables:
-          - Name: REPOSITORY_URI
-            Value: <Your-ECR-Repository-URI>
       Source:
         Type: CODEPIPELINE
-        BuildSpec: |
-          version: 0.2
-          phases:
-            pre_build:
-              commands:
-                - echo Logging in to Amazon ECR...
-                - aws --version
-                - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
-                - REPOSITORY_URI=<Your-ECR-Repository-URI>
-                - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-                - IMAGE_TAG=${COMMIT_HASH:=latest}
-            build:
-              commands:
-                - echo Build started on `date`
-                - echo Building the Docker image...
-                - docker build -t $REPOSITORY_URI:latest .
-                - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
-            post_build:
-              commands:
-                - echo Build completed on `date`
-                - echo Pushing the Docker image...
-                - docker push $REPOSITORY_URI:latest
-                - docker push $REPOSITORY_URI:$IMAGE_TAG
       ServiceRole: !GetAtt CodeBuildServiceRole.Arn
 
   CodeBuildServiceRole:
