--- a/cloudformation/codepipeline.yml
+++ b/cloudformation/codepipeline.yml
@@ -158,6 +158,25 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
+                  - ecs:DescribeServices
+                  - ecs:DescribeTaskDefinition
+                  - ecs:DescribeTasks
+                  - ecs:ListTasks
+                  - ecs:RegisterTaskDefinition
+                  - ecs:UpdateService
+                Resource: arn:aws:ecs:us-east-1:031878740168:service/bmr-ecs-cluster-cluster/bmr-ecs-cluster-service          
+              - Effect: Allow
+                Action:
+                  - ecr:GetDownloadUrlForLayer
+                  - ecr:BatchGetImage
+                  - ecr:BatchCheckLayerAvailability
+                  - ecr:PutImage
+                  - ecr:InitiateLayerUpload
+                  - ecr:UploadLayerPart
+                  - ecr:CompleteLayerUpload
+                Resource: '*'              
+              - Effect: Allow
+                Action:
                   - s3:GetObject
                   - s3:PutObject
                   - s3:GetBucketAcl
