full ecs permissions...still testing

--- a/cloudformation/codepipeline.yml
+++ b/cloudformation/codepipeline.yml
@@ -158,12 +158,7 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
-                  - ecs:DescribeServices
-                  - ecs:DescribeTaskDefinition
-                  - ecs:DescribeTasks
-                  - ecs:ListTasks
-                  - ecs:RegisterTaskDefinition
-                  - ecs:UpdateService
+                  - ecs:*
                 Resource: '*'
               - Effect: Allow
                 Action:
