--- a/cloudformation/codepipeline.yml
+++ b/cloudformation/codepipeline.yml
@@ -157,6 +157,9 @@ Resources:
             Version: '2012-10-17'
             Statement:
               - Effect: Allow
+                Action: iam:PassRole
+                Resource: '*'            
+              - Effect: Allow
                 Action:
                   - ecs:*
                 Resource: '*'
